--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
-          <img src="/assets/img/image.png" class="img-fluid animated" alt="" width="450px" height="450px">
+          <img src="./assets/img/image.png" class="img-fluid animated" alt="" width="450px" height="450px">
         </div>
       </div>
     </div>
